# pr-automator-agent

./: README.md  pyproject.toml
agent/: entrypoint.py  pr_automator_agent.py
agent/adapters/: git_adapter.py
agent/clients/: agility_mcp_client.py  gerrit_client.py
agent/orchestrators/: review_orchestrator.py  submit_orchestrator.py
agent/reviewers/: review_engine.py  rules_engine.py  stack_detector.py
agent/reviewers/analyzers/: dotnet_analyzer.py  node_analyzer.py  python_analyzer.py
agent/services/: change_id_service.py  commit_message_service.py  git_service.py  story_resolution_service.py
agent/starter/: agent_starter.py
